Fix text wrapping on mobile safari

--- a/src/style/vue-tut-highlighter.scss
+++ b/src/style/vue-tut-highlighter.scss
@@ -16,7 +16,8 @@
   }
 
   .prism-editor__editor {
-    white-space: pre !important;
+    white-space: pre;
+    word-wrap: inherit;
   }
 
   .prism-editor-wrapper {
